tests/oeedger8r/basictypes/duplicated_count.edl
// Copyright (c) Open Enclave SDK contributors.
// Licensed under the MIT License.

enclave {
    trusted {
        // error: duplicated attribute: `count'.
        public void ecall_count([out, count = len, count = 1024] char* dst, [in, count = 512, count = len] const char* src, size_t len);
    };
};
